fixed text on mobile

--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body {
   font-size: 20px;
   color: #002C55;
   font-weight: bold;
+  white-space: nowrap;
 }
 
 @media screen and (max-width: 480px) {
